--- a/css/reset.css
+++ b/css/reset.css
@@ -67,7 +67,7 @@
 		/* Section 1
 		 * --------------------------------------- */
 		#section0{
-			background: url(../img/bg1.png)no-repeat ;
+			background: url(../img/1.jpg)no-repeat ;
 			background-size: 100% 100%;
 		}
 
@@ -75,27 +75,27 @@
 		/* Section 2
 		 * --------------------------------------- */
 		#slide1 {
-			background: url(../img/3.jpg)no-repeat ;
+			background: url(../img/2.1.jpg)no-repeat ;
 			background-size: 100% 100%;
 		}
 		#slide2 {
-			background: url(../img/bg3stars.png)no-repeat ;
+			background: url(../img/2.2.jpg)no-repeat ;
 			background-size: 100% 100%;
 		}
 		#slide3 {
-			background: url(../img/report.png)no-repeat ;
+			background: url(../img/2.3.jpg)no-repeat ;
 			background-size: 100% 100%;
 		}
 		/* Section 3
 		 * --------------------------------------- */
 
 		#section2 {
-			background: url(../img/1.png)no-repeat ;
+			background: url(../img/3.jpg)no-repeat ;
 			background-size: 100% 100%;
 		
 		}
 		#section3 {
-			background: url(../img/bg1.jpg)no-repeat ;
+			background: url(../img/4.jpg)no-repeat ;
 			background-size: 100% 100%;
 		
 		}
@@ -232,4 +232,11 @@ text-shadow:0px 0px 3px #ff0000,0px 0px 5px #0000ff;
  	background-color: rgba(0,0,0,0.1);
  	z-index: 7;
  	padding: 5px 10px;
+ }
+
+ @media only screen and(max-width: 480px) {
+ 	p.text {
+ 		font-size:  30px;
+ 		width: 100%;
+ 	}
  }
