--- a/css/reset.css
+++ b/css/reset.css
@@ -75,7 +75,7 @@
 		/* Section 2
 		 * --------------------------------------- */
 		#slide1 {
-			background: url(../img/2.1.jpg)no-repeat ;
+			background: url(../img/2.1.JPG)no-repeat ;
 			background-size: 100% 100%;
 		}
 		#slide2 {
@@ -90,8 +90,8 @@
 		 * --------------------------------------- */
 
 		#section2 {
-			background: url(../img/3.jpg)no-repeat ;
-			background-size: 100% 100%;
+			background: url(../img/3.JPG)no-repeat ;
+	background-size: 100% 100%;
 		
 		}
 		#section3 {
